--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
 }
+h1 {
+  font-family: 'Bigelow Rules';
+  font-size: 72px;
+  color:aquamarine;
+
+}
 
 .App-logo {
   height: 40vmin;
